--- a/style.css
+++ b/style.css
@@ -24,10 +24,17 @@
 }
 
 .settings {
-   width: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    width: 200px;
 }
 
 .sketchPad {
+    display: flex;
+    flex-wrap: wrap;
     width: 500px;
 }
 
@@ -38,4 +45,15 @@
 }
 input[type="color"] {
     
+}
+
+.square {
+    
+    
+}
+
+.sizePicker {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
