--- a/style.css
+++ b/style.css
@@ -26,9 +26,9 @@
 .settings {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    gap: 30px;
+    /* gap: 30px; */
     width: 200px;
 }
 
@@ -38,11 +38,19 @@
     width: 500px;
 }
 
+.colorBlock {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
 
 input[type="color"] {
-   height: 50px;
-  width: 50px;
-  border-radius: 25px; 
+  height: 100px;
+  width: 100px;
+  background-color: transparent;
+  border: 0px;
+  
 }
 
 
