--- a/style.css
+++ b/style.css
@@ -60,3 +60,15 @@ input[type="color"] {
     flex-direction: column;
     align-items: center;
 }
+
+button {
+    border-radius: 50%;
+    padding: 10px;
+    background-color: bisque;
+    border: none;
+    
+}
+
+.active {
+    border: 2px solid cyan;
+}
